# http-sse

./: .gitignore  Dockerfile  Readme.MD  docker-compose.yml  go.mod  main.go
http-sse-server/: Cargo.toml  Readme.MD
http-sse-server/config/: default.toml  live.toml
http-sse-server/src/: app_ops.rs  application.rs  configuration.rs  contracts.rs  logging.rs  main.rs  mappers.rs  settings.rs  sse_exchange.rs
http-sse-server/src/mappers/: app_settings_mappers.rs  contract_mappers.rs  mod.rs
http-sse-server/src/peers/: discovery.rs  factory.rs  k8s_compute.rs  mod.rs
http-sse-server/src/routes/: clients.rs  mod.rs
webclient/: App.tsx  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
