[package]
name = "http-sse-server"
version = "0.1.0"
authors = ["kahgeh <kahgeh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.7"
serde={version="1", features = [ "rc"] }
time={version="0.3.0-alpha-2", features = ["formatting"] }
config = "0.11"
tracing= { version="0.1.26", features=["async-await"] }
tracing-futures="0.2.5"
tracing-subscriber = "0.2.19"
tracing-bunyan-formatter = "0.2.4"
tracing-actix-web = "0.4.0-beta.7"
